switch back to sglang

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,16 +8,15 @@
             "name": "ralcp",
             "type": "debugpy",
             "request": "launch",
-            "program": "/home/siqiouya/anaconda3/envs/taf/bin/simuleval",
+            "program": "/home/siqiouyang/.local/bin/simuleval",
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}",
             "env": {
-                "PATH": "/home/siqiouya/work/TAF/ninja:$PATH",
-                "PYTHONPATH": "/home/siqiouya/work/TAF",
+                "PATH": "/home/siqiouyang/work/projects/TAF/ninja:$PATH",
+                "PYTHONPATH": "/home/siqiouyang/work/projects/TAF",
                 "NCCL_P2P_DISABLE": "1",
                 "NCCL_IB_DISABLE": "1",
-                "CUDA_VISIBLE_DEVICES": "0",
-                "TQDM_DISABLE": "1"
+                "CUDA_VISIBLE_DEVICES": "3",
             },
             "args": [
                 "--agent",
@@ -29,9 +28,9 @@
                 "--target-language",
                 "zh",
                 "--source",
-                "/home/siqiouya/work/TAF/data/en_zh/generaltest2023.en-zh.src.en",
+                "data/en_zh/generaltest2023.en-zh.src.en",
                 "--target",
-                "/home/siqiouya/work/TAF/data/en_zh/generaltest2023.en-zh.ref.refA.zh",
+                "data/en_zh/generaltest2023.en-zh.ref.refA.zh",
                 "--sacrebleu-tokenizer", 
                 "zh",
                 "--eval-latency-unit", 
@@ -39,12 +38,12 @@
                 
                 "--translation-model-type",
                 // "madlad",
-                "tower",
-                // "nllb",
+                // "tower",
+                "nllb",
                 "--translation-model-path",
                 // "/compute/babel-4-1/siqiouya/madlad400-3b-mt",
-                "/compute/babel-4-1/siqiouya/towerinstruct-7b-v0.1",
-                // "/compute/babel-4-1/siqiouya/nllb-200-distilled-600M",
+                // "/compute/babel-4-1/siqiouya/towerinstruct-7b-v0.1",
+                "/mnt/taurus/data/siqiouyang/download/nllb-200-distilled-1.3B",
                 "--beam-size",
                 "10",
                 "--max-len-a",
@@ -62,16 +61,15 @@
             "name": "ralcp_taf",
             "type": "debugpy",
             "request": "launch",
-            "program": "/home/siqiouya/anaconda3/envs/taf/bin/simuleval",
+            "program": "/home/siqiouyang/.local/bin/simuleval",
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}",
             "env": {
-                "PYTHONPATH": "/home/siqiouya/work/TAF",
-                "PATH": "/home/siqiouya/work/TAF/ninja:$PATH",
+                "PYTHONPATH": "/home/siqiouyang/work/projects/TAF",
+                "PATH": "/home/siqiouyang/work/projects/TAF/ninja:$PATH",
                 "NCCL_P2P_DISABLE": "1",
                 "NCCL_IB_DISABLE": "1",
-                "CUDA_VISIBLE_DEVICES": "0",
-                // "TQDM_DISABLE": "1"
+                "CUDA_VISIBLE_DEVICES": "3",
             },
             "args": [
                 "--agent",
@@ -84,10 +82,10 @@
                 "en",
                 "--source",
                 // "/home/siqiouya/work/TAF/data/en_zh/generaltest2023.en-zh.src.en",
-                "/home/siqiouya/work/TAF/data/zh_en/newstest2020-zhen.zh.sep",
+                "data/zh_en/newstest2020-zhen.zh.sep",
                 "--target",
                 // "/home/siqiouya/work/TAF/data/en_zh/generaltest2023.en-zh.ref.refA.zh",
-                "/home/siqiouya/work/TAF/data/zh_en/newstest2020-zhen.en",
+                "data/zh_en/newstest2020-zhen.en",
 
                 // "--sacrebleu-tokenizer", 
                 // "zh",
@@ -101,7 +99,7 @@
                 "--prediction-model-type",
                 "llama",
                 "--prediction-model-path",
-                "/compute/babel-4-1/siqiouya/llama-3.1-8b-instruct-hf",
+                "/mnt/taurus/data/siqiouyang/download/llama3.1-8b-instruct-hf",
                 "--prediction-num-continuations",
                 "10",
                 "--prediction-max-tokens",
@@ -113,10 +111,12 @@
 
                 "--translation-model-type",
                 "tower",
+                // "nllb",
                 "--translation-model-path",
-                "/compute/babel-4-1/siqiouya/towerinstruct-7b-v0.1",
+                "/mnt/taurus/data/siqiouyang/download/towerinstruct-7b-v0.2",
+                // "/mnt/taurus/data/siqiouyang/download/nllb-200-distilled-1.3B",
                 "--beam-size",
-                "4",
+                "1",
                 "--max-len-a",
                 "1.5",
                 "--max-len-b",
